# StockShark

./: Cargo.toml  README.md  config.json
src/: main.rs
src/board/: bitboard.rs  mod.rs  position.rs  zobrist.rs
src/engine/: book.rs  eval.rs  mod.rs  polyglot.rs  search.rs  tt.rs
src/gui/: app.rs  board_widget.rs  mod.rs
src/moves/: generator.rs  make_move.rs  mod.rs
src/uci/: mod.rs
testing/: .gitignore  config.sh  gauntlet.sh  sprt.sh
