[package]
name = "stockshark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stockshark"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
